@@ -43,11 +43,11 @@
  * mandatory starting with API v. 1.
  */
 gboolean
-ofa_extension_startup( GTypeModule *module, GApplication *application )
+ofa_extension_startup( GTypeModule *module, ofaIGetter *getter )
 {
 	static const gchar *thisfn = "import-bourso-pdf/ofa_module_ofa_extension_startup";
 
-	g_debug( "%s: module=%p, application=%p", thisfn, ( void * ) module, ( void * ) application  );
+	g_debug( "%s: module=%p, getter=%p", thisfn, ( void * ) module, ( void * ) getter  );
 
 	ofa_bourso_pdf_importer_register_type( module );
 
