@@ -34,9 +34,11 @@
 
 #include <glib.h>
 
+#include "api/ofa-igetter.h"
+
 G_BEGIN_DECLS
 
-void  ofa_tva_main_signal_connect( GApplication *application );
+void  ofa_tva_main_signal_connect( ofaIGetter *getter );
 
 guint ofa_tva_main_get_theme     ( const gchar *action_name );
 
